--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -26,7 +26,13 @@
     <!--<add key="M1RegParamsPath6" value="Software\\OTS\\OPSComputeBakio"/>
 	<add key="M1RegParamsPath62" value="Software\\OTS\\OPSComputeBeasain"/>
 	<add key="M1RegParamsPath72" value="Software\\OTS\\OPSComputeZumarraga"/>-->
-    <add key="M1RegParamsPath73" value="SOFTWARE\OTS\OPSComputeSoria"/>    
+    <add key="M1RegParamsPath73" value="SOFTWARE\OTS\OPSComputeSoria"/>
+
+    <!-- Database schema owner -->
+    <add key="SchemaOwner" value="OPSMUGIPARKTEST"/>
+
+    <!-- "Path" al fichero de configuración de tablas y campos -->
+    <add key="UserSchemaPath" value="C:\inetpub\wwwroot\opssoria\schemas\ops_tables.xml"/>    
     
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -155,8 +161,39 @@
     <add key="XML_TAG_NAME" value="arinpark"/>
     <add key="TIME_STEPS_OFFSET_IN_MINUTES" value="5"/>
     <add key="MONEY_STEPS_OFFSET_IN_CENTS" value="5"/>
-    <!-- END M50 configuration elements -->    
+    <!-- END M50 configuration elements -->
 
+    <!--<<<END: BECS config-->
+    <add key="Groups.ESRO" value="40001"/>
+    <add key="Groups.ESRE" value="40002"/>
+    <add key="TariffVis.ESRO.NoResident" value="101"/>
+    <add key="TariffVis.ESRO.Resident" value="102"/>
+    <add key="TariffVis.ESRE.NoResident" value="103"/>
+    <add key="TariffVis.ESRE.Resident1Day" value="104"/>
+    <add key="TariffVis.ESRE.Resident5Day" value="105"/>
+    <add key="TariffVis.ESRE.Resident20Day" value="106"/>
+    <add key="GlobalizeCommaGPS" value="1"/>
+    <add key="MapArticles" value="1"/>
+    <add key="ArticlesMap" value="104,105,106"/>
+    <add key="Constraints.MaxEstancia" value="1"/>
+    <add key="OperationStatus.Unparked" value="1"/>
+    <add key="OperationStatus.Parked" value="2"/>
+    <add key="Operation.Online" value="1"/>
+    <add key="EnableSpaceBonuses" value="false"/>
+    <add key="EnableHash" value="false"/>
+    <add key="GlobalizeCommaGPS" value="1"/>
+    <!-- Codigos de la tabla MOBILE_USERS -->
+    <add key="ActivateAccount.No" value="0"/>
+    <add key="ActivateAccount.Yes" value="1"/>
+    <add key="AddressCountry.Spain" value="ESPANA"/>
+    <!-- Report configuration -->
+    <add key="ReportPath" value="c:\\temp\\"/>
+    <add key="ReportFilePrefix" value="Informe_"/>
+    <add key="ReportTitle" value="Informe de operaciones"/>
+    <add key="ReportHeaderLogo" value="c:\\temp\\MugiparkHeader.jpg"/>
+    <add key="ReportFooterText1" value="Z+M UTE (U-99292393) C/ JULIAN RIBERA Nº 18, LOCAL. 50010. ZARAGOZA."/>
+    <add key="ReportFooterText2" value="AYUNTAMIENTO DE ZARAGOZA (P-5030300-G)"/>    
+    
     <!-- Email configuration -->
     <add key="SendAddress" value="noreply.arinpark@gerteksa.eus"/>
     <add key="EmailSubject" value="Informe de operaciones"/>
