Inclusión de swagger. Añadido del attribute Required como annotation. Casos de error en FinePaymentConfirm

--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -16,23 +16,23 @@
   </LogSettings>
   <appSettings>
     <!-- Log directory and file name -->
-    <add key="ServiceLog" value="E:\\OPSWebservicesAPI\\Logs\\{0}_OPSWebServicesAPI.log"/>
+    <add key="ServiceLog" value="E:\\OPSWebservicesAPI\\Logs\\{0}_OPSWebServicesAPI.log" />
     
     <!-- DLL Paths needed for M1 libreries -->
     <!--<add key="M1DLLPath" value="C:\Projects\ops\02_branches\CC\64_bits\VS 2019\OPSWebServices\OPSCompute.NET\OPSCompute\bin\Debug"/>-->
-    <add key="M1DLLPath" value="C:\inetpub\OPSServices\Common\WIN64\opscompute"/>
+    <add key="M1DLLPath" value="C:\inetpub\OPSServices\Common\WIN64\opscompute" />
     <!-- Reg path in HKLM\Software\OTS for M1 Calculation params-->
-    <add key="M1RegParamsPath" value="Software\\OTS\\OPSComputeMugipark"/>
+    <add key="M1RegParamsPath" value="Software\\OTS\\OPSComputeMugipark" />
     <!--<add key="M1RegParamsPath6" value="Software\\OTS\\OPSComputeBakio"/>
 	<add key="M1RegParamsPath62" value="Software\\OTS\\OPSComputeBeasain"/>
 	<add key="M1RegParamsPath72" value="Software\\OTS\\OPSComputeZumarraga"/>-->
-    <add key="M1RegParamsPath73" value="SOFTWARE\OTS\OPSComputeSoria"/>
+    <add key="M1RegParamsPath73" value="SOFTWARE\OTS\OPSComputeSoria" />
 
     <!-- Database schema owner -->
-    <add key="SchemaOwner" value="OPSMUGIPARKTEST"/>
+    <add key="SchemaOwner" value="OPSMUGIPARKTEST" />
 
     <!-- "Path" al fichero de configuración de tablas y campos -->
-    <add key="UserSchemaPath" value="C:\inetpub\wwwroot\opssoria\schemas\ops_tables.xml"/>    
+    <add key="UserSchemaPath" value="C:\inetpub\wwwroot\opssoria\schemas\ops_tables.xml" />    
     
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -115,117 +115,117 @@
     <add key="ArticleType.VipList" value="6" />
     <!-- Used in M50 too -->
     <!-- Codigos de las restricciones -->
-    <add key="ConstraintsDef.MaxEstancia" value="1"/>
+    <add key="ConstraintsDef.MaxEstancia" value="1" />
     <!-- Used in M50 too -->
-    <add key="ConstraintsDef.MinReentrada" value="2"/>
+    <add key="ConstraintsDef.MinReentrada" value="2" />
     <!-- Used in M50 too -->
-    <add key="ConstraintsDef.TiempoCortesia" value="3"/>
+    <add key="ConstraintsDef.TiempoCortesia" value="3" />
     <!-- Used in M50 too -->
-    <add key="ConstraintsDef.MaxImport" value="4"/>
+    <add key="ConstraintsDef.MaxImport" value="4" />
     <!-- Used in M50 too -->
-    <add key="ConstraintsDef.MinImport" value="5"/>
+    <add key="ConstraintsDef.MinImport" value="5" />
     <!-- Used in M50 too -->
     <!-- Codigos de la tabla STATUS -->
-    <add key="Status.OK" value="0"/>
+    <add key="Status.OK" value="0" />
     <!-- Used in M50 too -->
-    <add key="Status.OUT_OF_SERVICE" value="1"/>
+    <add key="Status.OUT_OF_SERVICE" value="1" />
     <!-- Used in M50 too -->
-    <add key="Status.OUT_OF_SALES" value="2"/>
+    <add key="Status.OUT_OF_SALES" value="2" />
     <!-- Used in M50 too -->
     <!-- END M01 configuration elements (some of them are used in M50 too) -->
     <!-- BEGIN M04 configuration elements -->
-    <add key="FinesDefCodes.Fine" value="1"/>
-    <add key="FinesDefCodes.Cancellation" value="2"/>
-    <add key="FinesDefCodes.Annulment" value="3"/>
-    <add key="FinesDefCodes.Payment" value="4"/>
-    <add key="FinesDef.Payment" value="99"/>
-    <add key="FineStatusAdmonDef.Pending" value="0"/>
-    <add key="FineCancellation.Payable" value="1"/>
-    <add key="FineCancellation.Expired" value="2"/>
-    <add key="FineCancellation.NotPayable" value="3"/>
-    <add key="FinesDefCode.Fine" value="1"/>
+    <add key="FinesDefCodes.Fine" value="1" />
+    <add key="FinesDefCodes.Cancellation" value="2" />
+    <add key="FinesDefCodes.Annulment" value="3" />
+    <add key="FinesDefCodes.Payment" value="4" />
+    <add key="FinesDef.Payment" value="99" />
+    <add key="FineStatusAdmonDef.Pending" value="0" />
+    <add key="FineCancellation.Payable" value="1" />
+    <add key="FineCancellation.Expired" value="2" />
+    <add key="FineCancellation.NotPayable" value="3" />
+    <add key="FinesDefCode.Fine" value="1" />
     <!-- END M04 configuration elements -->
     <!-- BEGIN M50 configuration elements -->
-    <add key="M50.DIASPARAVEHICULOREINCIDENTE" value="365"/>
-    <add key="M50.MULTASPARAVEHICULOREINCIDENTE" value="20"/>
-    <add key="PayTypesDef.Chipcard" value="1"/>
-    <add key="PayTypesDef.CreditCard" value="2"/>
-    <add key="PayTypesDef.Cash" value="3"/>
-    <add key="PayTypesDef.WebPayment" value="4"/>
-    <add key="PayTypesDef.Telephone" value="5"/>
-    <add key="RechargeType.Bonus" value="1"/>
-    <add key="SpaceStatus.Free" value="0"/>
-    <add key="SpaceStatus.Occupied" value="1"/>
+    <add key="M50.DIASPARAVEHICULOREINCIDENTE" value="365" />
+    <add key="M50.MULTASPARAVEHICULOREINCIDENTE" value="20" />
+    <add key="PayTypesDef.Chipcard" value="1" />
+    <add key="PayTypesDef.CreditCard" value="2" />
+    <add key="PayTypesDef.Cash" value="3" />
+    <add key="PayTypesDef.WebPayment" value="4" />
+    <add key="PayTypesDef.Telephone" value="5" />
+    <add key="RechargeType.Bonus" value="1" />
+    <add key="SpaceStatus.Free" value="0" />
+    <add key="SpaceStatus.Occupied" value="1" />
     <!-- Only the first 24 chars will be used -->
-    <add key="MOBILE_PAYMENT_MACTRIPLEDES_KEY" value="1423423423"/>
-    <add key="XML_TAG_NAME" value="arinpark"/>
-    <add key="TIME_STEPS_OFFSET_IN_MINUTES" value="5"/>
-    <add key="MONEY_STEPS_OFFSET_IN_CENTS" value="5"/>
+    <add key="MOBILE_PAYMENT_MACTRIPLEDES_KEY" value="1423423423" />
+    <add key="XML_TAG_NAME" value="arinpark" />
+    <add key="TIME_STEPS_OFFSET_IN_MINUTES" value="5" />
+    <add key="MONEY_STEPS_OFFSET_IN_CENTS" value="5" />
     <!-- END M50 configuration elements -->
 
     <!--<<<END: BECS config-->
-    <add key="Groups.ESRO" value="40001"/>
-    <add key="Groups.ESRE" value="40002"/>
-    <add key="TariffVis.ESRO.NoResident" value="101"/>
-    <add key="TariffVis.ESRO.Resident" value="102"/>
-    <add key="TariffVis.ESRE.NoResident" value="103"/>
-    <add key="TariffVis.ESRE.Resident1Day" value="104"/>
-    <add key="TariffVis.ESRE.Resident5Day" value="105"/>
-    <add key="TariffVis.ESRE.Resident20Day" value="106"/>
-    <add key="GlobalizeCommaGPS" value="1"/>
-    <add key="MapArticles" value="1"/>
-    <add key="ArticlesMap" value="104,105,106"/>
-    <add key="Constraints.MaxEstancia" value="1"/>
-    <add key="OperationStatus.Unparked" value="1"/>
-    <add key="OperationStatus.Parked" value="2"/>
-    <add key="Operation.Online" value="1"/>
-    <add key="EnableSpaceBonuses" value="false"/>
-    <add key="EnableHash" value="false"/>
-    <add key="GlobalizeCommaGPS" value="1"/>
+    <add key="Groups.ESRO" value="40001" />
+    <add key="Groups.ESRE" value="40002" />
+    <add key="TariffVis.ESRO.NoResident" value="101" />
+    <add key="TariffVis.ESRO.Resident" value="102" />
+    <add key="TariffVis.ESRE.NoResident" value="103" />
+    <add key="TariffVis.ESRE.Resident1Day" value="104" />
+    <add key="TariffVis.ESRE.Resident5Day" value="105" />
+    <add key="TariffVis.ESRE.Resident20Day" value="106" />
+    <add key="GlobalizeCommaGPS" value="1" />
+    <add key="MapArticles" value="1" />
+    <add key="ArticlesMap" value="104,105,106" />
+    <add key="Constraints.MaxEstancia" value="1" />
+    <add key="OperationStatus.Unparked" value="1" />
+    <add key="OperationStatus.Parked" value="2" />
+    <add key="Operation.Online" value="1" />
+    <add key="EnableSpaceBonuses" value="false" />
+    <add key="EnableHash" value="false" />
+    <add key="GlobalizeCommaGPS" value="1" />
     <!-- Codigos de la tabla MOBILE_USERS -->
-    <add key="ActivateAccount.No" value="0"/>
-    <add key="ActivateAccount.Yes" value="1"/>
-    <add key="AddressCountry.Spain" value="ESPANA"/>
+    <add key="ActivateAccount.No" value="0" />
+    <add key="ActivateAccount.Yes" value="1" />
+    <add key="AddressCountry.Spain" value="ESPANA" />
     <!-- Report configuration -->
-    <add key="ReportPath" value="c:\\temp\\"/>
-    <add key="ReportFilePrefix" value="Informe_"/>
-    <add key="ReportTitle" value="Informe de operaciones"/>
-    <add key="ReportHeaderLogo" value="c:\\temp\\MugiparkHeader.jpg"/>
-    <add key="ReportFooterText1" value="Z+M UTE (U-99292393) C/ JULIAN RIBERA Nº 18, LOCAL. 50010. ZARAGOZA."/>
-    <add key="ReportFooterText2" value="AYUNTAMIENTO DE ZARAGOZA (P-5030300-G)"/>    
+    <add key="ReportPath" value="c:\\temp\\" />
+    <add key="ReportFilePrefix" value="Informe_" />
+    <add key="ReportTitle" value="Informe de operaciones" />
+    <add key="ReportHeaderLogo" value="c:\\temp\\MugiparkHeader.jpg" />
+    <add key="ReportFooterText1" value="Z+M UTE (U-99292393) C/ JULIAN RIBERA Nº 18, LOCAL. 50010. ZARAGOZA." />
+    <add key="ReportFooterText2" value="AYUNTAMIENTO DE ZARAGOZA (P-5030300-G)" />    
     
     <!-- Email configuration -->
-    <add key="SendAddress" value="noreply.arinpark@gerteksa.eus"/>
-    <add key="EmailSubject" value="Informe de operaciones"/>
-    <add key="SMTPServer" value="outlook.office365.com"/>
-    <add key="SMTPPort" value="587"/>
-    <add key="EmailUser" value="noreply.arinpark@gerteksa.eus"/>
-    <add key="EmailPassword" value="Nor1012M"/>
-    <add key="Parameter.AppVersion" value="P_MOBILE_APP_VERSION"/>
-    <add key="MobileOrdersTerminal.Web" value="2"/>
+    <add key="SendAddress" value="noreply.arinpark@gerteksa.eus" />
+    <add key="EmailSubject" value="Informe de operaciones" />
+    <add key="SMTPServer" value="outlook.office365.com" />
+    <add key="SMTPPort" value="587" />
+    <add key="EmailUser" value="noreply.arinpark@gerteksa.eus" />
+    <add key="EmailPassword" value="Nor1012M" />
+    <add key="Parameter.AppVersion" value="P_MOBILE_APP_VERSION" />
+    <add key="MobileOrdersTerminal.Web" value="2" />
 
     <!-- Transaction configuration -->
-    <add key="MerchantTerminal" value="1"/>
-    <add key="MerchantCurrency" value="978"/>
-    <add key="MerchantTranstactionType" value="0"/>
-    <add key="MerchantProductDesc" value="Recarga {0} euros por app móvil Geoslab"/>
-    <add key="MerchantUrl" value="http://188.210.218.86/OPSPrepayWebArinpark/CheckResponse.aspx"/>
-    <add key="MerchantUrlOk" value="http://188.210.218.86/OPSPrepayWebArinpark/ResponseOK.aspx"/>
-    <add key="MerchantUrlKo" value="http://188.210.218.86/OPSPrepayWebArinpark/ResponseKO.aspx"/>
+    <add key="MerchantTerminal" value="1" />
+    <add key="MerchantCurrency" value="978" />
+    <add key="MerchantTranstactionType" value="0" />
+    <add key="MerchantProductDesc" value="Recarga {0} euros por app móvil Geoslab" />
+    <add key="MerchantUrl" value="http://188.210.218.86/OPSPrepayWebArinpark/CheckResponse.aspx" />
+    <add key="MerchantUrlOk" value="http://188.210.218.86/OPSPrepayWebArinpark/ResponseOK.aspx" />
+    <add key="MerchantUrlKo" value="http://188.210.218.86/OPSPrepayWebArinpark/ResponseKO.aspx" />
     <add key="MerchantTest" value="0" />
     <add key="APP_URL" value="http://188.210.218.86/OPSPrepayWebArinpark/" />
-    <add key="Order.Origin" value="2"/>
-    <add key="SignatureVersion" value="HMAC_SHA256_V1"/>
-    <add key="GlobalizeCommaGPS" value="1"/>
-    <add key="NumDaysOperations" value="300"/>
-    <add key="XML_PARTNER_TAG_NAME" value="apparca"/>
-    <add key="PARTNER_MACTRIPLEDES_KEY" value="1407162214"/>
-    <add key="ServiceOperationStatus.Pending" value="0"/>
-    <add key="ServiceOperationsStatus.Used" value="1"/>
-    <add key="ServiceOperationsStatus.Cancelled" value="2"/>
-    <add key="ReportFooterLogo" value="c:\\temp\\MugiparkHeader.jpg"/>
-    <add key="EnableHash" value="false"/>
-    <add key="RecoveryCodeExpTime" value="2"/>
+    <add key="Order.Origin" value="2" />
+    <add key="SignatureVersion" value="HMAC_SHA256_V1" />
+    <add key="GlobalizeCommaGPS" value="1" />
+    <add key="NumDaysOperations" value="300" />
+    <add key="XML_PARTNER_TAG_NAME" value="apparca" />
+    <add key="PARTNER_MACTRIPLEDES_KEY" value="1407162214" />
+    <add key="ServiceOperationStatus.Pending" value="0" />
+    <add key="ServiceOperationsStatus.Used" value="1" />
+    <add key="ServiceOperationsStatus.Cancelled" value="2" />
+    <add key="ReportFooterLogo" value="c:\\temp\\MugiparkHeader.jpg" />
+    <add key="EnableHash" value="false" />
+    <add key="RecoveryCodeExpTime" value="2" />
 
     <!-- GPS zone configuration Soria -->
     <add key="cont73.NumZones" value="1" />
@@ -240,10 +240,10 @@
     <add key="cont73.Zone1.Area1.P4" value="41,750513:-2,494683" />
 
     <!-- Place search configuration -->
-    <add key="Place.Radius" value="1000"/>
-    <add key="Place.DateRange" value="30"/>
-    <add key="Place.ApiKey" value="AIzaSyChKp-fHTYs7noKgNZxVVgebSL1AsVZNyo"/>
-    <add key="cont73.LocalStretchSearchOnly" value="0"/>
+    <add key="Place.Radius" value="1000" />
+    <add key="Place.DateRange" value="30" />
+    <add key="Place.ApiKey" value="AIzaSyChKp-fHTYs7noKgNZxVVgebSL1AsVZNyo" />
+    <add key="cont73.LocalStretchSearchOnly" value="0" />
      
   </appSettings>
   <!--
@@ -300,6 +300,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
