--- a/OPSWebServicesAPI/packages.config
+++ b/OPSWebServicesAPI/packages.config
@@ -4,6 +4,7 @@
   <package id="AutoMapper" version="10.1.1" targetFramework="net461" />
   <package id="bootstrap" version="3.4.1" targetFramework="net46" />
   <package id="jQuery" version="3.4.1" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc.es" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net46" />
@@ -15,6 +16,7 @@
   <package id="Microsoft.AspNet.WebApi.Client.es" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core.es" version="5.2.7" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost.es" version="5.2.7" targetFramework="net46" />
@@ -24,5 +26,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net46" />
+  <package id="Swashbuckle.Core.Net45" version="5.2.1" targetFramework="net461" />
+  <package id="Swashbuckle.Net45" version="5.2.1" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
 </packages>
