--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -190,9 +190,9 @@
     <add key="ReportPath" value="c:\\temp\\" />
     <add key="ReportFilePrefix" value="Informe_" />
     <add key="ReportTitle" value="Informe de operaciones" />
-    <add key="ReportHeaderLogo" value="c:\\temp\\MugiparkHeader.jpg" />
-    <add key="ReportFooterText1" value="Z+M UTE (U-99292393) C/ JULIAN RIBERA Nº 18, LOCAL. 50010. ZARAGOZA." />
-    <add key="ReportFooterText2" value="AYUNTAMIENTO DE ZARAGOZA (P-5030300-G)" />    
+    <add key="ReportHeaderLogo" value="c:\\temp\\ArinparkHeader.jpg" />
+    <add key="ReportFooterText1" value="Boroa Enpresa-parkea, 21-22 48340 Zornotza-Amorebieta" />
+    <add key="ReportFooterText2" value="GERTEK SOCIEDAD DE GESTION Y SERVICIOS, S.A." />    
     
     <!-- Email configuration -->
     <add key="SendAddress" value="noreply.arinpark@gerteksa.eus" />
