Extracción de clases al Helpers de los proyectos OPSCommon, OPSCompute.NET y OPSCS, como CFineManager, Logger, etc.  Inclusión de los métodos de CreditCards de Insert para no usar los components. Inclusión del método de CouponsSetAsUsed para no usar los components. Correción de algunos textos de los loggers que no correspondían con el método en el que estaban

--- a/OPSWebServicesAPI/OPSWebServicesAPI.csproj
+++ b/OPSWebServicesAPI/OPSWebServicesAPI.csproj
@@ -214,8 +214,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\CFineManager.cs" />
     <Compile Include="Helpers\ConfigMapModel.cs" />
+    <Compile Include="Helpers\Dtx.cs" />
     <Compile Include="Helpers\ITextEvents.cs" />
+    <Compile Include="Helpers\Loc.cs" />
+    <Compile Include="Helpers\Logger.cs" />
+    <Compile Include="Helpers\OPSTripleDesEncryptor.cs" />
     <Compile Include="Models\Contract.cs" />
     <Compile Include="Models\ContractsInfo.cs" />
     <Compile Include="Models\Error.cs" />
