--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -200,7 +200,7 @@
     <add key="SMTPServer" value="outlook.office365.com" />
     <add key="SMTPPort" value="587" />
     <add key="EmailUser" value="noreply.arinpark@gerteksa.eus" />
-    <add key="EmailPassword" value="Nor1012M" />
+    <add key="EmailPassword" value="edese34@er$sd-tr" />
     <add key="Parameter.AppVersion" value="P_MOBILE_APP_VERSION" />
     <add key="MobileOrdersTerminal.Web" value="2" />
 
