Inclusión del endpoint QuerySectorsAPI y los modelos asociados. Cambio del mensaje enviado al usuario en el Recovery Email

--- a/OPSWebServicesAPI/OPSWebServicesAPI.csproj
+++ b/OPSWebServicesAPI/OPSWebServicesAPI.csproj
@@ -239,6 +239,9 @@
     <Compile Include="Models\ParkingTimeQuery.cs" />
     <Compile Include="Models\PlaceInfo.cs" />
     <Compile Include="Models\PlaceQuery.cs" />
+    <Compile Include="Models\SectorInfo.cs" />
+    <Compile Include="Models\SectorsInfo.cs" />
+    <Compile Include="Models\SectorsQuery.cs" />
     <Compile Include="Models\Step.cs" />
     <Compile Include="Models\StreetsInfo.cs" />
     <Compile Include="Models\StreetsQuery.cs" />
