--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -209,11 +209,11 @@
     <add key="MerchantCurrency" value="978" />
     <add key="MerchantTranstactionType" value="0" />
     <add key="MerchantProductDesc" value="Recarga {0} euros por app móvil Geoslab" />
-    <add key="MerchantUrl" value="http://192.168.73.85/OPSPrepayWebArinpark/CheckResponse.aspx" />
-    <add key="MerchantUrlOk" value="http://192.168.73.85/OPSPrepayWebArinpark/ResponseOK.aspx" />
-    <add key="MerchantUrlKo" value="http://192.168.73.85/OPSPrepayWebArinpark/ResponseKO.aspx" />
+    <add key="MerchantUrl" value="http://localhost/OPSPrepayWebArinpark/CheckResponse.aspx" />
+    <add key="MerchantUrlOk" value="http://localhost/OPSPrepayWebArinpark/ResponseOK.aspx" />
+    <add key="MerchantUrlKo" value="http://localhost/OPSPrepayWebArinpark/ResponseKO.aspx" />
     <add key="MerchantTest" value="0" />
-    <add key="APP_URL" value="http://192.168.73.85/OPSPrepayWebArinpark/" />
+    <add key="APP_URL" value="http://localhost/OPSPrepayWebArinpark/" />
     <add key="Order.Origin" value="2" />
     <add key="SignatureVersion" value="HMAC_SHA256_V1" />
     <add key="GlobalizeCommaGPS" value="1" />
