Cambio en QuerySectorAPI para que devuelva además de los sectores de un municipio, los sectores de una calle y el sector de una posición GPS determinada. Cambio en el RechargeUserCreditAPI para que devuelva la url completamente formada que se usa en el pago de Paycomet

--- a/OPSWebServicesAPI/OPSWebServicesAPI.csproj
+++ b/OPSWebServicesAPI/OPSWebServicesAPI.csproj
@@ -240,9 +240,12 @@
     <Compile Include="Models\PlaceInfo.cs" />
     <Compile Include="Models\PlaceQuery.cs" />
     <Compile Include="Models\SectorInfo.cs" />
+    <Compile Include="Models\SectorsAreasPoint.cs" />
     <Compile Include="Models\SectorsInfo.cs" />
     <Compile Include="Models\SectorsQuery.cs" />
     <Compile Include="Models\Step.cs" />
+    <Compile Include="Models\StreetFullInfo.cs" />
+    <Compile Include="Models\StreetsFullInfo.cs" />
     <Compile Include="Models\StreetsInfo.cs" />
     <Compile Include="Models\StreetsQuery.cs" />
     <Compile Include="Models\UnParkingConfirmQuery.cs" />
