--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -229,6 +229,13 @@
     <add key="EnableHash" value="false" />
     <add key="RecoveryCodeExpTime" value="2" />
 
+    <!-- Transaction configuration paytpv -->
+    <add key="PayTpv_MerchantMerchantCode" value="fb3jv9kw" />
+    <add key="PayTpv_MerchantTerminal" value="5380" />
+    <add key="PayTpv_Language" value="ES" />
+    <add key="PayTpv_MerchantCurrency" value="EUR" />
+    <add key="PayTpv_Password" value="L0YxGKzcqMTnHbdJ8s1r" />
+
     <!-- GPS zone configuration Soria -->
     <add key="cont73.NumZones" value="1" />
     <add key="cont73.Zone1.Id" value="60001" />
@@ -977,6 +984,7 @@
     <add key="Place.DateRange" value="30" />
     <add key="Place.ApiKey" value="AIzaSyChKp-fHTYs7noKgNZxVVgebSL1AsVZNyo" />
     <add key="cont73.LocalStretchSearchOnly" value="0" />
+    <add key="cont61.LocalStretchSearchOnly" value="0" />
      
   </appSettings>
   <!--
