Cambio en el GenerateUrlPayTpv añadiendo el parámetro MERCHANT_SCA_EXCEPTION = LWV a la url resultante

--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -234,6 +234,7 @@
     <add key="PayTpv_MerchantTerminal" value="5380" />
     <add key="PayTpv_Language" value="ES" />
     <add key="PayTpv_MerchantCurrency" value="EUR" />
+    <add key="PayTpv_MerchantScaException" value="LWV" />
     <add key="PayTpv_Password" value="L0YxGKzcqMTnHbdJ8s1r" />
 
     <!-- GPS zone configuration Soria -->
