Cambio en el QueryParkingStatus por el problema de los residentes. Ahora se llama directametne a GelLastParkingOperation sin tener en cuenta si es residente, rotacion o vip. Actualización del Payment y del User con lo último que tiene Clint (agregados los asmx ULT con el último código de los asmx)

--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -23,14 +23,18 @@
     <add key="M1DLLPath" value="C:\inetpub\OPSServices\Common\WIN64\opscompute" />
     <!-- Reg path in HKLM\Software\OTS for M1 Calculation params-->
     <add key="M1RegParamsPath" value="Software\\OTS\\OPSComputeMugipark" />
-    <!--<add key="M1RegParamsPath6" value="Software\\OTS\\OPSComputeBakio"/>
-	<add key="M1RegParamsPath62" value="Software\\OTS\\OPSComputeBeasain"/>
-	<add key="M1RegParamsPath72" value="Software\\OTS\\OPSComputeZumarraga"/>-->
-    <add key="M1RegParamsPath73" value="SOFTWARE\OTS\OPSComputeSoria" />
-    <add key="M1RegParamsPath61" value="Software\\OTS\\OPSComputeArrasate"/>
+    <add key="M1RegParamsPath62" value="Software\\OTS\\OPSComputeBeasain" />
+    <add key="M1RegParamsPath73" value="Software\\OTS\\OPSComputeSoria" />
+    <add key="M1RegParamsPath10" value="Software\\OTS\\OPSComputeHondarribia" />
+    <add key="M1RegParamsPath5" value="Software\\OTS\\OPSComputeTolosa" />
+    <add key="M1RegParamsPath6" value="Software\\OTS\\OPSComputeBakio" />
+    <add key="M1RegParamsPath3" value="Software\\OTS\\OPSComputeZarautz" />
+    <add key="M1RegParamsPath79" value="Software\\OTS\\OPSComputeDeba"/>
+    <add key="M1RegParamsPath81" value="Software\\OTS\\OPSComputeMutriku"/>
+    <add key="M1RegParamsPath61" value="Software\\OTS\\OPSComputeArrasate"/> 
 
     <!-- Database schema owner -->
-    <add key="SchemaOwner" value="OPSMUGIPARKTEST" />
+    <add key="SchemaOwner" value="OPSMUGIPARK" />
 
     <!-- "Path" al fichero de configuración de tablas y campos -->
     <add key="UserSchemaPath" value="C:\inetpub\wwwroot\opssoria\schemas\ops_tables.xml" />    
@@ -39,10 +43,21 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ContractList" value="0,61,73" />
+    <add key="ContractList" value="0,10,5,6,3,73,79,81,61"/>
+    <!--<add key="ContractList" value="0,61,73" />
     <add key="ConnectionString" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.85)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=xe)));User Id=opsmugiparktest;Password=opsmugiparktest;" />
     <add key="ConnectionString61" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.85)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=xe)));User Id=opsarrasatetest;Password=opsarrasatetest;" />
-    <add key="ConnectionString73" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.85)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=xe)));User Id=opssoriatest;Password=opssoriatest;" />
+    <add key="ConnectionString73" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.85)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=xe)));User Id=opssoriatest;Password=opssoriatest;" />-->
+    <add key="ConnectionString" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opsmugipark;Password=opsmugipark;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
+    <add key="ConnectionString62" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opsbeasain;Password=opsbeasain;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
+    <add key="ConnectionString73" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opssoria;Password=opssoria;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
+    <add key="ConnectionString10" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opshondarribia;Password=opshondarribia;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
+    <add key="ConnectionString5" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opstolosa;Password=opstolosa;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
+    <add key="ConnectionString6" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opsbakio;Password=opsbakio;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
+    <add key="ConnectionString3" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opszarautz;Password=opszarautz;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
+    <add key="ConnectionString79" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opsdeba;Password=opsdeba;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
+    <add key="ConnectionString81" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opsmutriku;Password=opsmutriku;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
+    <add key="ConnectionString61" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opsarrasatei;Password=opsarrasatei;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" /> 
     <add key="Parameter.AppVersion" value="P_MOBILE_APP_VERSION" />
     <add key="MOBILE_PAYMENT_MACTRIPLEDES_KEY" value="1423423423" />
     <add key="XML_TAG_NAME" value="arinpark" />
