Cambio url paycomet Residentes para zona luze y arrunta de arrasate Uso de remote para mobile_users y mobile_users_plates

--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -31,7 +31,8 @@
     <add key="M1RegParamsPath3" value="Software\\OTS\\OPSComputeZarautz" />
     <add key="M1RegParamsPath79" value="Software\\OTS\\OPSComputeDeba"/>
     <add key="M1RegParamsPath81" value="Software\\OTS\\OPSComputeMutriku"/>
-    <add key="M1RegParamsPath61" value="Software\\OTS\\OPSComputeArrasate"/> 
+    <add key="M1RegParamsPath61" value="Software\\OTS\\OPSComputeArrasate"/>
+    <add key="M1RegParamsPath1" value="Software\\OTS\\OPSComputeDurango"/>
 
     <!-- Database schema owner -->
     <add key="SchemaOwner" value="OPSMUGIPARK" />
@@ -43,7 +44,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ContractList" value="0,10,5,6,3,73,79,81,61"/>
+    <add key="ContractList" value="0,10,5,6,3,73,79,81,61,1"/>
     <!--<add key="ContractList" value="0,61,73" />
     <add key="ConnectionString" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.85)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=xe)));User Id=opsmugiparktest;Password=opsmugiparktest;" />
     <add key="ConnectionString61" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.85)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=xe)));User Id=opsarrasatetest;Password=opsarrasatetest;" />
@@ -57,7 +58,8 @@
     <add key="ConnectionString3" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opszarautz;Password=opszarautz;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
     <add key="ConnectionString79" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opsdeba;Password=opsdeba;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
     <add key="ConnectionString81" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opsmutriku;Password=opsmutriku;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
-    <add key="ConnectionString61" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opsarrasatei;Password=opsarrasatei;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" /> 
+    <add key="ConnectionString61" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opsarrasatei;Password=opsarrasatei;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
+    <add key="ConnectionString1" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.75)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opsdurango;Password=opsdurango;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5; Decr Pool Size=2;" />
     <add key="Parameter.AppVersion" value="P_MOBILE_APP_VERSION" />
     <add key="MOBILE_PAYMENT_MACTRIPLEDES_KEY" value="1423423423" />
     <add key="XML_TAG_NAME" value="arinpark" />
@@ -1002,6 +1004,13 @@
     <add key="Place.ApiKey" value="AIzaSyChKp-fHTYs7noKgNZxVVgebSL1AsVZNyo" />
     <add key="cont73.LocalStretchSearchOnly" value="0" />
     <add key="cont61.LocalStretchSearchOnly" value="0" />
+    <add key="cont10.LocalStretchSearchOnly" value="0"/>
+    <add key="cont5.LocalStretchSearchOnly" value="1"/>
+    <add key="cont6.LocalStretchSearchOnly" value="0"/>
+    <add key="cont3.LocalStretchSearchOnly" value="0"/>
+    <add key="cont79.LocalStretchSearchOnly" value="0"/>
+    <add key="cont81.LocalStretchSearchOnly" value="0"/>
+    <add key="cont1.LocalStretchSearchOnly" value="0"/>
      
   </appSettings>
   <!--
